Changes to Fix Wallpaper on Firefox

--- a/src/css/experience.css
+++ b/src/css/experience.css
@@ -5,4 +5,5 @@
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
+  background-size: cover;
 }
