--- a/src/css/home.css
+++ b/src/css/home.css
@@ -5,6 +5,7 @@
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
+  background-size: cover;
 }
 
 .jumbotron .container {
