--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -5,6 +5,7 @@
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
+  background-size: cover;
 }
 .thumbnail{
     width: 300px;
