--- a/src/css/shared.css
+++ b/src/css/shared.css
@@ -38,6 +38,7 @@
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
+  background-size: cover;
 }
 .jumbotron .content{
   width: -webkit-fit-content;
